# CRYMIUM

./: LICENSE  README.md
Code/: CMakeLists.txt
Code/Crymium/: CMakeLists.txt  CrymiumContainer.cpp  CrymiumContainer.h  CrymiumContainerComposer.cpp  CrymiumContainerComposer.h  CrymiumInitialiser.cpp  CrymiumInitialiser.h  CrymiumPlugin.cpp  CrymiumPlugin.h  StdAfx.h
Code/Crymium.SubProcess/: CMakeLists.txt  SubProcess.cpp
Code/Crymium.SubProcess/renderer/: ClientAppRenderer.cpp  ClientAppRenderer.h  ClientRenderDelegate.cpp  ClientRenderDelegate.h  DelegateCollection.cpp  DelegateCollection.h  IDelegate.h  IDelegateCollection.h  V8Handler.cpp  V8Handler.h
Code/Crymium.UnitTests/: CMakeLists.txt
Code/Crymium.UnitTests/Browsers/GivenBrowserSettingsCreator/: WhenBrowserSettingsAreCreated.cpp
Code/Crymium.UnitTests/Browsers/Mocks/: MockBrowser.h
Code/Crymium.UnitTests/Buffer/GivenBufferProvider/: WhenSetAndGetBuffer.cpp
Code/Crymium.UnitTests/Buffer/GivenBufferRenderHandler/: WhenGetViewRect.cpp  WhenPaint.cpp
Code/Crymium.UnitTests/Buffer/GivenBufferSettings/: WhenBufferSettingsAreConstructed.cpp
Code/Crymium.UnitTests/Buffer/GivenBufferSizeProvider/: WhenGetBufferSize.cpp
Code/Crymium.UnitTests/Buffer/Mocks/: MockBufferProvider.h  MockBufferSettings.h  MockBufferSizeProvider.h
Code/Crymium.UnitTests/Cef/GivenCefMessageHandler/: WhenMessageIsHandled.cpp
Code/Crymium.UnitTests/Cef/GivenMessageHandler/: WhenAQueryIsReceived.cpp
Code/Crymium.UnitTests/Cef/Mocks/: MockCefMessageHandler.h  MockCefQueryHandler.h  MockCefRectSettings.h
Code/Crymium.UnitTests/Cry/GivenCryInitialiser/: WhenInitialised.cpp
Code/Crymium.UnitTests/Cry/Mocks/: MockInput.h  MockSystemGlobalEnvironment.h  MockTexture.h
Code/Crymium.UnitTests/Inputs/GivenDefaultKeyIdMapperComposer/: WhenDefaultKeyIdMapperIsComposed.cpp
Code/Crymium.UnitTests/Inputs/GivenInputInitialiser/: WhenInitialised.cpp
Code/Crymium.UnitTests/Inputs/GivenInputMapper/: WhenInputIsMapped.cpp
Code/Crymium.UnitTests/Inputs/GivenInputStateMapper/: WhenInputStateIsMapped.cpp
Code/Crymium.UnitTests/Inputs/GivenKeyIdMapper/: WhenKeyIdIsMapped.cpp  WhenKeyIdMappingIsSet.cpp
Code/Crymium.UnitTests/Inputs/Mocks/: MockInputEventListener.h  MockInputInitialiser.h  MockInputStateMapper.h  MockKeyIdMapper.h
Code/Crymium.UnitTests/JavaScript/GivenJavaScriptExecutor/: WhenJavaScriptIsExecuted.cpp
Code/Crymium.UnitTests/JavaScript/Mocks/: MockJavaScriptExecutor.h  MockJavaScriptFunctionCallBuilder.h
Code/Crymium.UnitTests/Rendering/Mocks/: MockCrymiumRenderer.h  MockCrymiumRendererInitialiser.h  MockRendererSettings.h
Code/Crymium.UnitTests/Textures/GivenTextureCreator/: WhenTextureIsCreated.cpp
Code/Crymium.UnitTests/Textures/GivenTextureProvider/: WhenTextureIsNotSet.cpp  WhenTextureIsSet.cpp
Code/Crymium.UnitTests/Textures/GivenTextureRemover/: WhenTextureIsRemoved.cpp
Code/Crymium.UnitTests/Textures/GivenTextureRenderer/: WhenTextureIsRendered.cpp
Code/Crymium.UnitTests/Textures/GivenTextureSettings/: WhenConstructed.cpp
Code/Crymium.UnitTests/Textures/GivenTextureUpdater/: WhenTextureIsUpdated.cpp
Code/Crymium.UnitTests/Textures/Mocks/: MockTextureCreator.h  MockTextureDrawer.h  MockTextureProvider.h  MockTextureRemover.h  MockTextureRenderer.h  MockTextureSettings.h
Code/Crymium.UnitTests/Uis/GivenUiActivator/: WhenUiIsActivated.cpp
Code/Crymium.UnitTests/Uis/GivenUiDirectoryProvider/: WhenConstructed.cpp
Code/Crymium.UnitTests/Uis/GivenUiPathResolver/: WhenUiPathIsResolved.cpp
Code/Crymium.UnitTests/Uis/GivenUiSettings/: WhenConstructed.cpp
Code/Crymium.UnitTests/Uis/Mocks/: MockUiDirectoryProvider.h  MockUiPathResolver.h  MockUiSettings.h
Code/Crymium/Browsers/: Browser.cpp  Browser.h  BrowserSettingsCreator.cpp  BrowserSettingsCreator.h  WindowInfoCreator.cpp  WindowInfoCreator.h
Code/Crymium/Buffer/: BufferProvider.cpp  BufferProvider.h  BufferRenderHandler.cpp  BufferRenderHandler.h  BufferSettings.cpp  BufferSettings.h  BufferSizeProvider.cpp  BufferSizeProvider.h
Code/Crymium/Cef/: CefBrowserClient.cpp  CefBrowserClient.h  CefCaptureFrameListener.cpp  CefCaptureFrameListener.h  CefInitialiser.cpp  CefInitialiser.h  CefInputEventListener.cpp  CefInputEventListener.h  CefMessageHandler.cpp  CefMessageHandler.h  CefRectSettings.cpp  CefRectSettings.h  CrymiumCefApp.cpp  CrymiumCefApp.h  CrymiumCefInitialiser.cpp  CrymiumCefInitialiser.h  CrymiumCefMainArgsCreator.cpp  CrymiumCefMainArgsCreator.h  CrymiumCefSettings.cpp  CrymiumCefSettings.h  CrymiumCefSettingsCreator.cpp  CrymiumCefSettingsCreator.h  CrymiumSandboxInfoCreator.cpp  CrymiumSandboxInfoCreator.h  MessageHandler.cpp  MessageHandler.h
Code/Crymium/Core/: IContainer.h  ICrymiumContainer.h  ICrymiumPlugin.h  IInitialiser.h  IRenderHandler.h
Code/Crymium/Cry/: CryInitialiser.cpp  CryInitialiser.h
Code/Crymium/Inputs/: DefaultKeyIdMapperComposer.cpp  DefaultKeyIdMapperComposer.h  InputInitialiser.cpp  InputInitialiser.h  InputMapper.cpp  InputMapper.h  InputStateMapper.cpp  InputStateMapper.h  KeyCode.h  KeyIdMapper.cpp  KeyIdMapper.h
Code/Crymium/JavaScript/: JavaScriptExecutor.cpp  JavaScriptExecutor.h  JavaScriptFunctionCallBuilder.cpp  JavaScriptFunctionCallBuilder.h  JavaScriptFunctionExecutor.cpp  JavaScriptFunctionExecutor.h
Code/Crymium/Rendering/: CrymiumRenderer.cpp  CrymiumRenderer.h  CrymiumRendererInitialiser.cpp  CrymiumRendererInitialiser.h  RendererProvider.cpp  RendererProvider.h  RendererSettings.cpp  RendererSettings.h
Code/Crymium/Textures/: TextureCreator.cpp  TextureCreator.h  TextureDrawer.cpp  TextureDrawer.h  TextureProvider.cpp  TextureProvider.h  TextureRemover.cpp  TextureRemover.h  TextureRenderer.cpp  TextureRenderer.h  TextureSettings.cpp  TextureSettings.h  TextureUpdater.cpp  TextureUpdater.h
Code/Crymium/Uis/: CryUiDirectoryProvider.cpp  CryUiDirectoryProvider.h  UiActivator.cpp  UiActivator.h  UiCloser.cpp  UiCloser.h  UiDirectoryProvider.cpp  UiDirectoryProvider.h  UiPathResolver.cpp  UiPathResolver.h  UiSettings.cpp  UiSettings.h
Code/Crymium/Uis/Core/: IUiActivator.h  (+4 more)
(+34 files in other folders)
